Mejora del código. Incorporación de módulos